--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -11,7 +11,7 @@
   gap: 30px;
   width: 85vw;
   align-items: flex-start;
-  margin: 0 20px;
+  margin: 90px 20px;
   overflow-x: scroll;
   scrollbar-width: none;
   overflow-y: hidden;
