--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -109,6 +109,7 @@
     box-shadow: inset 1px 0px 1em #4a94d7;
     padding: 4px 8px;
     border-radius: 24px;
+    font-size: 0.75em;
   }
   
   .project-links {
