--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -2,9 +2,10 @@
     width: 200px;
     height: 200px;
     object-fit: cover;
-    transition: transform 400ms;
+    transition: transform filter 400ms;
     border-radius: 50%;
     object-position: top;
+    filter: none;
 }
 
 
