--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -250,7 +250,7 @@ button {
 }
 */
 
-.bottom-card-title h2 {
+#bottom-card-title {
   display: none;
 }
 
@@ -307,27 +307,6 @@ button {
 }
 
 
-/*
-.skill-card:hover .glitters-container {
-  filter: none;
-}
-.skill-card {
-  margin: 0 auto;
-}
-.skill-card h2 {
-  font-size: 1rem;
-  align-items: center;
-  text-align: center;
-}
-
-.skill-card img {
-  visibility: hidden;
-}
-.skill-card:hover img {
-  visibility: visible!important;
-}
-*/
-
 @media (max-width: 768px) {
   .page-content {
     margin: 0;
@@ -337,13 +316,12 @@ button {
     padding: 40px;
   }
 
-  #skills {
-    border: none;
-    box-shadow: none;
-  }
-
   .main-card {
     padding: 20px;
+  }
+
+  .skill-card {
+    margin: 20px;
   }
 
   #nav2, #nav3 {
@@ -354,7 +332,7 @@ button {
   display: none;
   }
 
-  .bottom-card-title h2 {
+ #bottom-card-title {
     display: inline block;
   }
 
