--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,6 +3,13 @@ p {
   font-family: 'Raleway';
 }
 
+.bio-title {
+    font-size: 1.5em;
+    line-height: 1.1;
+    font-family: 'Cormorant Unicase';
+    margin: 0;
+}
+
 #intro {
   display: flex;
   flex-direction: column;
