--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -95,8 +95,38 @@ button {
   visibility: visible !important;
 }
 
+.side-card:focus > p,
+.side-card:focus > a,
+.side-card:focus > div {
+  visibility: visible !important;
+}
+
+.side-card:focus {
+  width: min(100%, 335px);
+  height: max-content;
+  z-index: 3;
+  filter: brightness(1.2);
+  -webkit-filter: brightness(1.2); /* Safari and Chrome */
+  -moz-filter: brightness(1.2); /* Firefox */
+  -o-filter: brightness(1.2); /* Opera */
+  box-shadow: #80f3e8;
+  background-color: #b7b7b7;
+}
+
 .side-card:hover h2 {
   font-size: 2.5em;
+}
+
+.side-card:focus h2 {
+  font-size: 2.5em;
+}
+
+.left-card:focus {
+  left: 0;
+}
+
+.right-card:focus {
+  right: 0;
 }
 
 .left-card {
@@ -145,6 +175,13 @@ button {
 }
 
 #contact:hover {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: flex-start;
+}
+
+#contact:focus {
   display: flex;
   flex-direction: column;
   text-align: left;
