--- a/src/Components/Glitters/Glitters.css
+++ b/src/Components/Glitters/Glitters.css
@@ -8,12 +8,12 @@
     flex-direction: column;
   }
 }
-/*
-.glitters-group1 {
-    align-self: flex-start;
+
+.glitter {
+  max-width: 100%; /* Prevent images from exceeding their container */
 }
 
+.glitters-group1,
 .glitters-group2 {
-    align-self: flex-end;
+  flex: 1; /* Distribute available space evenly between groups */
 }
-*/
