--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 :root {
-  font-family: Raleway, 'Cormorant Unicase', Inter, system-ui, Avenir, Helvetica, Arial,
-    serif, sans-serif;
+  font-family: Raleway, 'Cormorant Unicase', Inter, system-ui, Avenir, Helvetica,
+    Arial, serif, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #F5F0F0;
+  /*color: #04075a;*/
+  color: #f5f0f0;
   background-color: #cbcbcb;
 
   font-synthesis: none;
@@ -17,11 +18,11 @@
 
 a {
   font-weight: 500;
+  /*color: #535bf2;*/
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
   filter: brightness(1.3);
 }
 
@@ -83,12 +84,10 @@ button {
 */
 
 button:hover {
-  filter:brightness(1.2)
-}
+opacity: 0.8;}
 button:focus,
 button:focus-visible {
-  filter:brightness(1.2)
-}
+  opacity: 0.8;}
 /*
 @media (prefers-color-scheme: light) {
   :root {
@@ -113,7 +112,7 @@ avant box shadow : 213547 ->*/
 
 .main-card {
   border: 1px solid #646cff;
-  box-shadow: inset 1px 0px 1em #4A94D7;
+  box-shadow: inset 1px 0px 1em #4a94d7;
   border-radius: 70px;
   padding: 30px;
 }
