--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -51,15 +51,15 @@ button {
 }
 
 .middle-card {
-  /*position: absolute;
+  position: absolute;
   left: 50%;
   top: 10%;
   transform: translateX(-50%);
-  width: max-content;*/
+  width: max-content;
   z-index: 0;
-  margin-left: auto;
+  /*margin-left: auto;
   margin-right: auto;
-  margin-top: -100px;
+  margin-top: -100px;*/
 }
 
 /* animation side-cards */
@@ -300,6 +300,10 @@ button {
   .right-card {
     z-index: 1;
   }
+
+  /*.middle-card {
+    margin-top: -10px;
+  }*/
 }
 /*
 .bottom-card-title {
