--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ h2 {
   line-height: 1.1;
   font-family: 'Cormorant Unicase';
   margin: 0;
+  text-shadow: 0 0 .1em rgba(100, 102, 255, 0.1), 0 0 .15em rgba(100, 102, 255, 0.1), 0 0 .2em rgba(100, 102, 255, 0.2), 0 0 .25em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.2), 0 0 .3em rgba(100, 102, 255, 0.3);
 }
 
 h1 {
@@ -59,6 +60,7 @@ h1 {
   line-height: 1.1;
   font-family: 'Cormorant Unicase';
   margin: 0;
+  text-shadow: 0 0 .1em rgba(100, 102, 255, 0.1), 0 0 .15em rgba(100, 102, 255, 0.1), 0 0 .2em rgba(100, 102, 255, 0.2), 0 0 .25em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.2), 0 0 .3em rgba(100, 102, 255, 0.3);
 }
 
 h3 {
@@ -66,6 +68,7 @@ h3 {
   line-height: 1.1;
   font-family: 'Cormorant Unicase';
   margin: 0;
+  text-shadow: 0 0 .1em rgba(100, 102, 255, 0.1), 0 0 .15em rgba(100, 102, 255, 0.1), 0 0 .2em rgba(100, 102, 255, 0.2), 0 0 .25em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.2), 0 0 .3em rgba(100, 102, 255, 0.3);
 }
 
 button {
@@ -77,6 +80,7 @@ button {
   background-color: transparent;
   line-height: 1.5em;
   padding: 0;
+  text-shadow: 0 0 .1em rgba(100, 102, 255, 0.1), 0 0 .15em rgba(100, 102, 255, 0.1), 0 0 .2em rgba(100, 102, 255, 0.2), 0 0 .25em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.1), 0 0 .3em rgba(100, 102, 255, 0.2), 0 0 .3em rgba(100, 102, 255, 0.3);
 }
 
 /*
