--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -11,7 +11,7 @@ footer {
   );
   background: linear-gradient(
     90deg,
-    rgb(97, 189, 89),
+    #61bd59,
     rgb(98, 199, 207),
     #1a99d4) 0% 0% / 135% 116%;
     /*
